// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteBuilder mysql basic queries no additional options 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (with \`conditions\` as (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\`) select \`conditions\`.\`actor_id\` from \`conditions\`)"`;

exports[`DeleteBuilder mysql basic queries no additional options 2`] = `Array []`;

exports[`DeleteBuilder mysql limit with number 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (with \`conditions\` as (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` limit ?) select \`conditions\`.\`actor_id\` from \`conditions\`)"`;

exports[`DeleteBuilder mysql limit with number 2`] = `
Array [
  10,
]
`;

exports[`DeleteBuilder mysql offset with number 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (with \`conditions\` as (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` limit 18446744073709551615 offset ?) select \`conditions\`.\`actor_id\` from \`conditions\`)"`;

exports[`DeleteBuilder mysql offset with number 2`] = `
Array [
  20,
]
`;

exports[`DeleteBuilder mysql orderBy with association (aggregate and through) 1`] = `"delete from \`film\` where \`film\`.\`film_id\` in (with \`conditions\` as (select \`f1\`.\`film_id\` from \`film\` as \`f1\` order by (select min(\`a1\`.\`last_update\`) as \`min\` from \`film_actor\` as \`f2\` inner join \`actor\` as \`a1\` on \`f2\`.\`actor_id\` = \`a1\`.\`actor_id\` where \`f1\`.\`film_id\` = \`f2\`.\`film_id\` group by \`f2\`.\`film_id\`) asc) select \`conditions\`.\`film_id\` from \`conditions\`)"`;

exports[`DeleteBuilder mysql orderBy with association (aggregate and through) 2`] = `Array []`;

exports[`DeleteBuilder mysql orderBy with association (aggregate) 1`] = `"delete from \`language\` where \`language\`.\`language_id\` in (with \`conditions\` as (select \`l1\`.\`language_id\` from \`language\` as \`l1\` order by (select avg(\`f1\`.\`replacement_cost\`) as \`avg\` from \`film\` as \`f1\` where \`l1\`.\`language_id\` = \`f1\`.\`language_id\` group by \`f1\`.\`language_id\`) asc) select \`conditions\`.\`language_id\` from \`conditions\`)"`;

exports[`DeleteBuilder mysql orderBy with association (aggregate) 2`] = `Array []`;

exports[`DeleteBuilder mysql orderBy with association (count) 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (with \`conditions\` as (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` order by (select count(\`f1\`.\`film_id\`) as \`count\` from \`film_actor\` as \`f2\` inner join \`film\` as \`f1\` on \`f2\`.\`film_id\` = \`f1\`.\`film_id\` where \`a1\`.\`actor_id\` = \`f2\`.\`actor_id\` group by \`f2\`.\`actor_id\`) asc) select \`conditions\`.\`actor_id\` from \`conditions\`)"`;

exports[`DeleteBuilder mysql orderBy with association (count) 2`] = `Array []`;

exports[`DeleteBuilder mysql orderBy with association (field) 1`] = `"delete from \`film\` where \`film\`.\`film_id\` in (with \`conditions\` as (select \`f1\`.\`film_id\` from \`film\` as \`f1\` order by (select \`l1\`.\`name\` from \`language\` as \`l1\` where \`f1\`.\`language_id\` = \`l1\`.\`language_id\`) asc) select \`conditions\`.\`film_id\` from \`conditions\`)"`;

exports[`DeleteBuilder mysql orderBy with association (field) 2`] = `Array []`;

exports[`DeleteBuilder mysql orderBy with empty object 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (with \`conditions\` as (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\`) select \`conditions\`.\`actor_id\` from \`conditions\`)"`;

exports[`DeleteBuilder mysql orderBy with empty object 2`] = `Array []`;

exports[`DeleteBuilder mysql orderBy with multiple fields 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (with \`conditions\` as (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` order by \`a1\`.\`actor_id\` asc, \`a1\`.\`last_update\` asc) select \`conditions\`.\`actor_id\` from \`conditions\`)"`;

exports[`DeleteBuilder mysql orderBy with multiple fields 2`] = `Array []`;

exports[`DeleteBuilder mysql orderBy with no fields 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (with \`conditions\` as (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\`) select \`conditions\`.\`actor_id\` from \`conditions\`)"`;

exports[`DeleteBuilder mysql orderBy with no fields 2`] = `Array []`;

exports[`DeleteBuilder mysql orderBy with one field 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (with \`conditions\` as (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` order by \`a1\`.\`first_name\` asc) select \`conditions\`.\`actor_id\` from \`conditions\`)"`;

exports[`DeleteBuilder mysql orderBy with one field 2`] = `Array []`;

exports[`DeleteBuilder mysql where and 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (with \`conditions\` as (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` where ((\`a1\`.\`first_name\` = ?) and (\`a1\`.\`last_name\` = ?))) select \`conditions\`.\`actor_id\` from \`conditions\`)"`;

exports[`DeleteBuilder mysql where and 2`] = `
Array [
  "BOB",
  "FAWCETT",
]
`;

exports[`DeleteBuilder mysql where equals null 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (with \`conditions\` as (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` where \`a1\`.\`first_name\` is null) select \`conditions\`.\`actor_id\` from \`conditions\`)"`;

exports[`DeleteBuilder mysql where equals null 2`] = `Array []`;

exports[`DeleteBuilder mysql where merge 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (with \`conditions\` as (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` where \`a1\`.\`first_name\` = ? and (exists (select null from \`film\` as \`f1\` inner join \`film_actor\` as \`f2\` on \`f2\`.\`film_id\` = \`f1\`.\`film_id\` where \`a1\`.\`actor_id\` = \`f2\`.\`actor_id\` and (exists (select null from \`language\` as \`l1\` where \`f1\`.\`language_id\` = \`l1\`.\`language_id\` and \`l1\`.\`name\` = ?)) group by \`f2\`.\`film_id\`))) select \`conditions\`.\`actor_id\` from \`conditions\`)"`;

exports[`DeleteBuilder mysql where merge 2`] = `
Array [
  "BOB",
  "English",
]
`;

exports[`DeleteBuilder mysql where not 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (with \`conditions\` as (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` where (not (\`a1\`.\`first_name\` = ?))) select \`conditions\`.\`actor_id\` from \`conditions\`)"`;

exports[`DeleteBuilder mysql where not 2`] = `
Array [
  "BOB",
]
`;

exports[`DeleteBuilder mysql where notEqual null 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (with \`conditions\` as (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` where \`a1\`.\`first_name\` is not null) select \`conditions\`.\`actor_id\` from \`conditions\`)"`;

exports[`DeleteBuilder mysql where notEqual null 2`] = `Array []`;

exports[`DeleteBuilder mysql where or 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (with \`conditions\` as (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` where ((\`a1\`.\`first_name\` = ?) or (\`a1\`.\`last_name\` = ?))) select \`conditions\`.\`actor_id\` from \`conditions\`)"`;

exports[`DeleteBuilder mysql where or 2`] = `
Array [
  "BOB",
  "FAWCETT",
]
`;

exports[`DeleteBuilder mysql where with association (aggregate) 1`] = `"delete from \`language\` where \`language\`.\`language_id\` in (with \`conditions\` as (select \`l1\`.\`language_id\` from \`language\` as \`l1\` where (exists (select null from \`film\` as \`f1\` where \`l1\`.\`language_id\` = \`f1\`.\`language_id\` group by \`f1\`.\`language_id\` having avg(\`f1\`.\`replacement_cost\`) > ?))) select \`conditions\`.\`language_id\` from \`conditions\`)"`;

exports[`DeleteBuilder mysql where with association (aggregate) 2`] = `
Array [
  10,
]
`;

exports[`DeleteBuilder mysql where with association (both field and aggregate) 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (with \`conditions\` as (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` where (exists (select null from \`film\` as \`f1\` inner join \`film_actor\` as \`f2\` on \`f2\`.\`film_id\` = \`f1\`.\`film_id\` where \`a1\`.\`actor_id\` = \`f2\`.\`actor_id\` and \`f1\`.\`title\` = ? group by \`f2\`.\`film_id\` having avg(\`f1\`.\`replacement_cost\`) > ?))) select \`conditions\`.\`actor_id\` from \`conditions\`)"`;

exports[`DeleteBuilder mysql where with association (both field and aggregate) 2`] = `
Array [
  "BEAR GRACELAND",
  20,
]
`;

exports[`DeleteBuilder mysql where with association (count) 1`] = `"delete from \`language\` where \`language\`.\`language_id\` in (with \`conditions\` as (select \`l1\`.\`language_id\` from \`language\` as \`l1\` where (exists (select null from \`film\` as \`f1\` where \`l1\`.\`language_id\` = \`f1\`.\`language_id\` group by \`f1\`.\`language_id\` having count(\`f1\`.\`film_id\`) > ?))) select \`conditions\`.\`language_id\` from \`conditions\`)"`;

exports[`DeleteBuilder mysql where with association (count) 2`] = `
Array [
  1,
]
`;

exports[`DeleteBuilder mysql where with association (multi) 1`] = `"delete from \`language\` where \`language\`.\`language_id\` in (with \`conditions\` as (select \`l1\`.\`language_id\` from \`language\` as \`l1\` where (exists (select null from \`film\` as \`f1\` where \`l1\`.\`language_id\` = \`f1\`.\`language_id\` and \`f1\`.\`title\` = ? group by \`f1\`.\`language_id\`))) select \`conditions\`.\`language_id\` from \`conditions\`)"`;

exports[`DeleteBuilder mysql where with association (multi) 2`] = `
Array [
  "BEAR GRACELAND",
]
`;

exports[`DeleteBuilder mysql where with association (single) 1`] = `"delete from \`film\` where \`film\`.\`film_id\` in (with \`conditions\` as (select \`f1\`.\`film_id\` from \`film\` as \`f1\` where (exists (select null from \`language\` as \`l1\` where \`f1\`.\`language_id\` = \`l1\`.\`language_id\` and \`l1\`.\`name\` = ?))) select \`conditions\`.\`film_id\` from \`conditions\`)"`;

exports[`DeleteBuilder mysql where with association (single) 2`] = `
Array [
  "English",
]
`;

exports[`DeleteBuilder mysql where with association (through) 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (with \`conditions\` as (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` where (exists (select null from \`film\` as \`f1\` inner join \`film_actor\` as \`f2\` on \`f2\`.\`film_id\` = \`f1\`.\`film_id\` where \`a1\`.\`actor_id\` = \`f2\`.\`actor_id\` and \`f1\`.\`title\` = ? group by \`f2\`.\`film_id\`))) select \`conditions\`.\`actor_id\` from \`conditions\`)"`;

exports[`DeleteBuilder mysql where with association (through) 2`] = `
Array [
  "BEAR GRACELAND",
]
`;

exports[`DeleteBuilder mysql where with empty object 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (with \`conditions\` as (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\`) select \`conditions\`.\`actor_id\` from \`conditions\`)"`;

exports[`DeleteBuilder mysql where with empty object 2`] = `Array []`;

exports[`DeleteBuilder mysql where with extra operators 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (with \`conditions\` as (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` where \`a1\`.\`first_name\` = ?) select \`conditions\`.\`actor_id\` from \`conditions\`)"`;

exports[`DeleteBuilder mysql where with extra operators 2`] = `
Array [
  "BOB",
]
`;

exports[`DeleteBuilder mysql where with nested association 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (with \`conditions\` as (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` where (exists (select null from \`film\` as \`f1\` inner join \`film_actor\` as \`f2\` on \`f2\`.\`film_id\` = \`f1\`.\`film_id\` where \`a1\`.\`actor_id\` = \`f2\`.\`actor_id\` and (exists (select null from \`language\` as \`l1\` where \`f1\`.\`language_id\` = \`l1\`.\`language_id\` and \`l1\`.\`name\` = ?)) group by \`f2\`.\`film_id\`))) select \`conditions\`.\`actor_id\` from \`conditions\`)"`;

exports[`DeleteBuilder mysql where with nested association 2`] = `
Array [
  "English",
]
`;

exports[`DeleteBuilder mysql where with non-existent field 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (with \`conditions\` as (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\`) select \`conditions\`.\`actor_id\` from \`conditions\`)"`;

exports[`DeleteBuilder mysql where with non-existent field 2`] = `Array []`;

exports[`DeleteBuilder mysql where with one field 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (with \`conditions\` as (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` where \`a1\`.\`first_name\` = ?) select \`conditions\`.\`actor_id\` from \`conditions\`)"`;

exports[`DeleteBuilder mysql where with one field 2`] = `
Array [
  "BOB",
]
`;

exports[`DeleteBuilder mysql where with two field 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (with \`conditions\` as (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` where \`a1\`.\`first_name\` = ? and \`a1\`.\`last_name\` = ?) select \`conditions\`.\`actor_id\` from \`conditions\`)"`;

exports[`DeleteBuilder mysql where with two field 2`] = `
Array [
  "BOB",
  "GOODALL",
]
`;

exports[`DeleteBuilder postgres basic queries no additional options 1`] = `"delete from \\"actor\\" where \\"actor\\".\\"actor_id\\" in (select \\"a1\\".\\"actor_id\\" from \\"actor\\" as \\"a1\\")"`;

exports[`DeleteBuilder postgres basic queries no additional options 2`] = `Array []`;

exports[`DeleteBuilder postgres limit with number 1`] = `"delete from \\"actor\\" where \\"actor\\".\\"actor_id\\" in (select \\"a1\\".\\"actor_id\\" from \\"actor\\" as \\"a1\\" limit ?)"`;

exports[`DeleteBuilder postgres limit with number 2`] = `
Array [
  10,
]
`;

exports[`DeleteBuilder postgres offset with number 1`] = `"delete from \\"actor\\" where \\"actor\\".\\"actor_id\\" in (select \\"a1\\".\\"actor_id\\" from \\"actor\\" as \\"a1\\" offset ?)"`;

exports[`DeleteBuilder postgres offset with number 2`] = `
Array [
  20,
]
`;

exports[`DeleteBuilder postgres orderBy with association (aggregate and through) 1`] = `"delete from \\"film\\" where \\"film\\".\\"film_id\\" in (select \\"f1\\".\\"film_id\\" from \\"film\\" as \\"f1\\" order by (select min(\\"a1\\".\\"last_update\\") as \\"min\\" from \\"film_actor\\" as \\"f2\\" inner join \\"actor\\" as \\"a1\\" on \\"f2\\".\\"actor_id\\" = \\"a1\\".\\"actor_id\\" where \\"f1\\".\\"film_id\\" = \\"f2\\".\\"film_id\\" group by \\"f2\\".\\"film_id\\") asc)"`;

exports[`DeleteBuilder postgres orderBy with association (aggregate and through) 2`] = `Array []`;

exports[`DeleteBuilder postgres orderBy with association (aggregate) 1`] = `"delete from \\"language\\" where \\"language\\".\\"language_id\\" in (select \\"l1\\".\\"language_id\\" from \\"language\\" as \\"l1\\" order by (select avg(\\"f1\\".\\"replacement_cost\\") as \\"avg\\" from \\"film\\" as \\"f1\\" where \\"l1\\".\\"language_id\\" = \\"f1\\".\\"language_id\\" group by \\"f1\\".\\"language_id\\") asc)"`;

exports[`DeleteBuilder postgres orderBy with association (aggregate) 2`] = `Array []`;

exports[`DeleteBuilder postgres orderBy with association (count) 1`] = `"delete from \\"actor\\" where \\"actor\\".\\"actor_id\\" in (select \\"a1\\".\\"actor_id\\" from \\"actor\\" as \\"a1\\" order by (select count(\\"f1\\".\\"film_id\\") as \\"count\\" from \\"film_actor\\" as \\"f2\\" inner join \\"film\\" as \\"f1\\" on \\"f2\\".\\"film_id\\" = \\"f1\\".\\"film_id\\" where \\"a1\\".\\"actor_id\\" = \\"f2\\".\\"actor_id\\" group by \\"f2\\".\\"actor_id\\") asc)"`;

exports[`DeleteBuilder postgres orderBy with association (count) 2`] = `Array []`;

exports[`DeleteBuilder postgres orderBy with association (field) 1`] = `"delete from \\"film\\" where \\"film\\".\\"film_id\\" in (select \\"f1\\".\\"film_id\\" from \\"film\\" as \\"f1\\" order by (select \\"l1\\".\\"name\\" from \\"language\\" as \\"l1\\" where \\"f1\\".\\"language_id\\" = \\"l1\\".\\"language_id\\") asc)"`;

exports[`DeleteBuilder postgres orderBy with association (field) 2`] = `Array []`;

exports[`DeleteBuilder postgres orderBy with empty object 1`] = `"delete from \\"actor\\" where \\"actor\\".\\"actor_id\\" in (select \\"a1\\".\\"actor_id\\" from \\"actor\\" as \\"a1\\")"`;

exports[`DeleteBuilder postgres orderBy with empty object 2`] = `Array []`;

exports[`DeleteBuilder postgres orderBy with multiple fields 1`] = `"delete from \\"actor\\" where \\"actor\\".\\"actor_id\\" in (select \\"a1\\".\\"actor_id\\" from \\"actor\\" as \\"a1\\" order by \\"a1\\".\\"actor_id\\" asc, \\"a1\\".\\"last_update\\" asc)"`;

exports[`DeleteBuilder postgres orderBy with multiple fields 2`] = `Array []`;

exports[`DeleteBuilder postgres orderBy with no fields 1`] = `"delete from \\"actor\\" where \\"actor\\".\\"actor_id\\" in (select \\"a1\\".\\"actor_id\\" from \\"actor\\" as \\"a1\\")"`;

exports[`DeleteBuilder postgres orderBy with no fields 2`] = `Array []`;

exports[`DeleteBuilder postgres orderBy with one field 1`] = `"delete from \\"actor\\" where \\"actor\\".\\"actor_id\\" in (select \\"a1\\".\\"actor_id\\" from \\"actor\\" as \\"a1\\" order by \\"a1\\".\\"first_name\\" asc)"`;

exports[`DeleteBuilder postgres orderBy with one field 2`] = `Array []`;

exports[`DeleteBuilder postgres where and 1`] = `"delete from \\"actor\\" where \\"actor\\".\\"actor_id\\" in (select \\"a1\\".\\"actor_id\\" from \\"actor\\" as \\"a1\\" where ((\\"a1\\".\\"first_name\\" = ?) and (\\"a1\\".\\"last_name\\" = ?)))"`;

exports[`DeleteBuilder postgres where and 2`] = `
Array [
  "BOB",
  "FAWCETT",
]
`;

exports[`DeleteBuilder postgres where equals null 1`] = `"delete from \\"actor\\" where \\"actor\\".\\"actor_id\\" in (select \\"a1\\".\\"actor_id\\" from \\"actor\\" as \\"a1\\" where \\"a1\\".\\"first_name\\" is null)"`;

exports[`DeleteBuilder postgres where equals null 2`] = `Array []`;

exports[`DeleteBuilder postgres where merge 1`] = `"delete from \\"actor\\" where \\"actor\\".\\"actor_id\\" in (select \\"a1\\".\\"actor_id\\" from \\"actor\\" as \\"a1\\" where \\"a1\\".\\"first_name\\" = ? and (exists (select null from \\"film\\" as \\"f1\\" inner join \\"film_actor\\" as \\"f2\\" on \\"f2\\".\\"film_id\\" = \\"f1\\".\\"film_id\\" where \\"a1\\".\\"actor_id\\" = \\"f2\\".\\"actor_id\\" and (exists (select null from \\"language\\" as \\"l1\\" where \\"f1\\".\\"language_id\\" = \\"l1\\".\\"language_id\\" and \\"l1\\".\\"name\\" = ?)) group by \\"f2\\".\\"film_id\\")))"`;

exports[`DeleteBuilder postgres where merge 2`] = `
Array [
  "BOB",
  "English",
]
`;

exports[`DeleteBuilder postgres where not 1`] = `"delete from \\"actor\\" where \\"actor\\".\\"actor_id\\" in (select \\"a1\\".\\"actor_id\\" from \\"actor\\" as \\"a1\\" where (not (\\"a1\\".\\"first_name\\" = ?)))"`;

exports[`DeleteBuilder postgres where not 2`] = `
Array [
  "BOB",
]
`;

exports[`DeleteBuilder postgres where notEqual null 1`] = `"delete from \\"actor\\" where \\"actor\\".\\"actor_id\\" in (select \\"a1\\".\\"actor_id\\" from \\"actor\\" as \\"a1\\" where \\"a1\\".\\"first_name\\" is not null)"`;

exports[`DeleteBuilder postgres where notEqual null 2`] = `Array []`;

exports[`DeleteBuilder postgres where or 1`] = `"delete from \\"actor\\" where \\"actor\\".\\"actor_id\\" in (select \\"a1\\".\\"actor_id\\" from \\"actor\\" as \\"a1\\" where ((\\"a1\\".\\"first_name\\" = ?) or (\\"a1\\".\\"last_name\\" = ?)))"`;

exports[`DeleteBuilder postgres where or 2`] = `
Array [
  "BOB",
  "FAWCETT",
]
`;

exports[`DeleteBuilder postgres where with association (aggregate) 1`] = `"delete from \\"language\\" where \\"language\\".\\"language_id\\" in (select \\"l1\\".\\"language_id\\" from \\"language\\" as \\"l1\\" where (exists (select null from \\"film\\" as \\"f1\\" where \\"l1\\".\\"language_id\\" = \\"f1\\".\\"language_id\\" group by \\"f1\\".\\"language_id\\" having avg(\\"f1\\".\\"replacement_cost\\") > ?)))"`;

exports[`DeleteBuilder postgres where with association (aggregate) 2`] = `
Array [
  10,
]
`;

exports[`DeleteBuilder postgres where with association (both field and aggregate) 1`] = `"delete from \\"actor\\" where \\"actor\\".\\"actor_id\\" in (select \\"a1\\".\\"actor_id\\" from \\"actor\\" as \\"a1\\" where (exists (select null from \\"film\\" as \\"f1\\" inner join \\"film_actor\\" as \\"f2\\" on \\"f2\\".\\"film_id\\" = \\"f1\\".\\"film_id\\" where \\"a1\\".\\"actor_id\\" = \\"f2\\".\\"actor_id\\" and \\"f1\\".\\"title\\" = ? group by \\"f2\\".\\"film_id\\" having avg(\\"f1\\".\\"replacement_cost\\") > ?)))"`;

exports[`DeleteBuilder postgres where with association (both field and aggregate) 2`] = `
Array [
  "BEAR GRACELAND",
  20,
]
`;

exports[`DeleteBuilder postgres where with association (count) 1`] = `"delete from \\"language\\" where \\"language\\".\\"language_id\\" in (select \\"l1\\".\\"language_id\\" from \\"language\\" as \\"l1\\" where (exists (select null from \\"film\\" as \\"f1\\" where \\"l1\\".\\"language_id\\" = \\"f1\\".\\"language_id\\" group by \\"f1\\".\\"language_id\\" having count(\\"f1\\".\\"film_id\\") > ?)))"`;

exports[`DeleteBuilder postgres where with association (count) 2`] = `
Array [
  1,
]
`;

exports[`DeleteBuilder postgres where with association (multi) 1`] = `"delete from \\"language\\" where \\"language\\".\\"language_id\\" in (select \\"l1\\".\\"language_id\\" from \\"language\\" as \\"l1\\" where (exists (select null from \\"film\\" as \\"f1\\" where \\"l1\\".\\"language_id\\" = \\"f1\\".\\"language_id\\" and \\"f1\\".\\"title\\" = ? group by \\"f1\\".\\"language_id\\")))"`;

exports[`DeleteBuilder postgres where with association (multi) 2`] = `
Array [
  "BEAR GRACELAND",
]
`;

exports[`DeleteBuilder postgres where with association (single) 1`] = `"delete from \\"film\\" where \\"film\\".\\"film_id\\" in (select \\"f1\\".\\"film_id\\" from \\"film\\" as \\"f1\\" where (exists (select null from \\"language\\" as \\"l1\\" where \\"f1\\".\\"language_id\\" = \\"l1\\".\\"language_id\\" and \\"l1\\".\\"name\\" = ?)))"`;

exports[`DeleteBuilder postgres where with association (single) 2`] = `
Array [
  "English",
]
`;

exports[`DeleteBuilder postgres where with association (through) 1`] = `"delete from \\"actor\\" where \\"actor\\".\\"actor_id\\" in (select \\"a1\\".\\"actor_id\\" from \\"actor\\" as \\"a1\\" where (exists (select null from \\"film\\" as \\"f1\\" inner join \\"film_actor\\" as \\"f2\\" on \\"f2\\".\\"film_id\\" = \\"f1\\".\\"film_id\\" where \\"a1\\".\\"actor_id\\" = \\"f2\\".\\"actor_id\\" and \\"f1\\".\\"title\\" = ? group by \\"f2\\".\\"film_id\\")))"`;

exports[`DeleteBuilder postgres where with association (through) 2`] = `
Array [
  "BEAR GRACELAND",
]
`;

exports[`DeleteBuilder postgres where with empty object 1`] = `"delete from \\"actor\\" where \\"actor\\".\\"actor_id\\" in (select \\"a1\\".\\"actor_id\\" from \\"actor\\" as \\"a1\\")"`;

exports[`DeleteBuilder postgres where with empty object 2`] = `Array []`;

exports[`DeleteBuilder postgres where with extra operators 1`] = `"delete from \\"actor\\" where \\"actor\\".\\"actor_id\\" in (select \\"a1\\".\\"actor_id\\" from \\"actor\\" as \\"a1\\" where \\"a1\\".\\"first_name\\" = ?)"`;

exports[`DeleteBuilder postgres where with extra operators 2`] = `
Array [
  "BOB",
]
`;

exports[`DeleteBuilder postgres where with nested association 1`] = `"delete from \\"actor\\" where \\"actor\\".\\"actor_id\\" in (select \\"a1\\".\\"actor_id\\" from \\"actor\\" as \\"a1\\" where (exists (select null from \\"film\\" as \\"f1\\" inner join \\"film_actor\\" as \\"f2\\" on \\"f2\\".\\"film_id\\" = \\"f1\\".\\"film_id\\" where \\"a1\\".\\"actor_id\\" = \\"f2\\".\\"actor_id\\" and (exists (select null from \\"language\\" as \\"l1\\" where \\"f1\\".\\"language_id\\" = \\"l1\\".\\"language_id\\" and \\"l1\\".\\"name\\" = ?)) group by \\"f2\\".\\"film_id\\")))"`;

exports[`DeleteBuilder postgres where with nested association 2`] = `
Array [
  "English",
]
`;

exports[`DeleteBuilder postgres where with non-existent field 1`] = `"delete from \\"actor\\" where \\"actor\\".\\"actor_id\\" in (select \\"a1\\".\\"actor_id\\" from \\"actor\\" as \\"a1\\")"`;

exports[`DeleteBuilder postgres where with non-existent field 2`] = `Array []`;

exports[`DeleteBuilder postgres where with one field 1`] = `"delete from \\"actor\\" where \\"actor\\".\\"actor_id\\" in (select \\"a1\\".\\"actor_id\\" from \\"actor\\" as \\"a1\\" where \\"a1\\".\\"first_name\\" = ?)"`;

exports[`DeleteBuilder postgres where with one field 2`] = `
Array [
  "BOB",
]
`;

exports[`DeleteBuilder postgres where with two field 1`] = `"delete from \\"actor\\" where \\"actor\\".\\"actor_id\\" in (select \\"a1\\".\\"actor_id\\" from \\"actor\\" as \\"a1\\" where \\"a1\\".\\"first_name\\" = ? and \\"a1\\".\\"last_name\\" = ?)"`;

exports[`DeleteBuilder postgres where with two field 2`] = `
Array [
  "BOB",
  "GOODALL",
]
`;

exports[`DeleteBuilder sqlite basic queries no additional options 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\`)"`;

exports[`DeleteBuilder sqlite basic queries no additional options 2`] = `Array []`;

exports[`DeleteBuilder sqlite limit with number 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` limit ?)"`;

exports[`DeleteBuilder sqlite limit with number 2`] = `
Array [
  10,
]
`;

exports[`DeleteBuilder sqlite offset with number 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` limit ? offset ?)"`;

exports[`DeleteBuilder sqlite offset with number 2`] = `
Array [
  -1,
  20,
]
`;

exports[`DeleteBuilder sqlite orderBy with association (aggregate and through) 1`] = `"delete from \`film\` where \`film\`.\`film_id\` in (select \`f1\`.\`film_id\` from \`film\` as \`f1\` order by (select min(\`a1\`.\`last_update\`) as \`min\` from \`film_actor\` as \`f2\` inner join \`actor\` as \`a1\` on \`f2\`.\`actor_id\` = \`a1\`.\`actor_id\` where \`f1\`.\`film_id\` = \`f2\`.\`film_id\` group by \`f2\`.\`film_id\`) asc)"`;

exports[`DeleteBuilder sqlite orderBy with association (aggregate and through) 2`] = `Array []`;

exports[`DeleteBuilder sqlite orderBy with association (aggregate) 1`] = `"delete from \`language\` where \`language\`.\`language_id\` in (select \`l1\`.\`language_id\` from \`language\` as \`l1\` order by (select avg(\`f1\`.\`replacement_cost\`) as \`avg\` from \`film\` as \`f1\` where \`l1\`.\`language_id\` = \`f1\`.\`language_id\` group by \`f1\`.\`language_id\`) asc)"`;

exports[`DeleteBuilder sqlite orderBy with association (aggregate) 2`] = `Array []`;

exports[`DeleteBuilder sqlite orderBy with association (count) 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` order by (select count(\`f1\`.\`film_id\`) as \`count\` from \`film_actor\` as \`f2\` inner join \`film\` as \`f1\` on \`f2\`.\`film_id\` = \`f1\`.\`film_id\` where \`a1\`.\`actor_id\` = \`f2\`.\`actor_id\` group by \`f2\`.\`actor_id\`) asc)"`;

exports[`DeleteBuilder sqlite orderBy with association (count) 2`] = `Array []`;

exports[`DeleteBuilder sqlite orderBy with association (field) 1`] = `"delete from \`film\` where \`film\`.\`film_id\` in (select \`f1\`.\`film_id\` from \`film\` as \`f1\` order by (select \`l1\`.\`name\` from \`language\` as \`l1\` where \`f1\`.\`language_id\` = \`l1\`.\`language_id\`) asc)"`;

exports[`DeleteBuilder sqlite orderBy with association (field) 2`] = `Array []`;

exports[`DeleteBuilder sqlite orderBy with empty object 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\`)"`;

exports[`DeleteBuilder sqlite orderBy with empty object 2`] = `Array []`;

exports[`DeleteBuilder sqlite orderBy with multiple fields 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` order by \`a1\`.\`actor_id\` asc, \`a1\`.\`last_update\` asc)"`;

exports[`DeleteBuilder sqlite orderBy with multiple fields 2`] = `Array []`;

exports[`DeleteBuilder sqlite orderBy with no fields 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\`)"`;

exports[`DeleteBuilder sqlite orderBy with no fields 2`] = `Array []`;

exports[`DeleteBuilder sqlite orderBy with one field 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` order by \`a1\`.\`first_name\` asc)"`;

exports[`DeleteBuilder sqlite orderBy with one field 2`] = `Array []`;

exports[`DeleteBuilder sqlite where and 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` where ((\`a1\`.\`first_name\` = ?) and (\`a1\`.\`last_name\` = ?)))"`;

exports[`DeleteBuilder sqlite where and 2`] = `
Array [
  "BOB",
  "FAWCETT",
]
`;

exports[`DeleteBuilder sqlite where equals null 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` where \`a1\`.\`first_name\` is null)"`;

exports[`DeleteBuilder sqlite where equals null 2`] = `Array []`;

exports[`DeleteBuilder sqlite where merge 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` where \`a1\`.\`first_name\` = ? and (exists (select null from \`film\` as \`f1\` inner join \`film_actor\` as \`f2\` on \`f2\`.\`film_id\` = \`f1\`.\`film_id\` where \`a1\`.\`actor_id\` = \`f2\`.\`actor_id\` and (exists (select null from \`language\` as \`l1\` where \`f1\`.\`language_id\` = \`l1\`.\`language_id\` and \`l1\`.\`name\` = ?)) group by \`f2\`.\`film_id\`)))"`;

exports[`DeleteBuilder sqlite where merge 2`] = `
Array [
  "BOB",
  "English",
]
`;

exports[`DeleteBuilder sqlite where not 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` where (not (\`a1\`.\`first_name\` = ?)))"`;

exports[`DeleteBuilder sqlite where not 2`] = `
Array [
  "BOB",
]
`;

exports[`DeleteBuilder sqlite where notEqual null 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` where \`a1\`.\`first_name\` is not null)"`;

exports[`DeleteBuilder sqlite where notEqual null 2`] = `Array []`;

exports[`DeleteBuilder sqlite where or 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` where ((\`a1\`.\`first_name\` = ?) or (\`a1\`.\`last_name\` = ?)))"`;

exports[`DeleteBuilder sqlite where or 2`] = `
Array [
  "BOB",
  "FAWCETT",
]
`;

exports[`DeleteBuilder sqlite where with association (aggregate) 1`] = `"delete from \`language\` where \`language\`.\`language_id\` in (select \`l1\`.\`language_id\` from \`language\` as \`l1\` where (exists (select null from \`film\` as \`f1\` where \`l1\`.\`language_id\` = \`f1\`.\`language_id\` group by \`f1\`.\`language_id\` having avg(\`f1\`.\`replacement_cost\`) > ?)))"`;

exports[`DeleteBuilder sqlite where with association (aggregate) 2`] = `
Array [
  10,
]
`;

exports[`DeleteBuilder sqlite where with association (both field and aggregate) 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` where (exists (select null from \`film\` as \`f1\` inner join \`film_actor\` as \`f2\` on \`f2\`.\`film_id\` = \`f1\`.\`film_id\` where \`a1\`.\`actor_id\` = \`f2\`.\`actor_id\` and \`f1\`.\`title\` = ? group by \`f2\`.\`film_id\` having avg(\`f1\`.\`replacement_cost\`) > ?)))"`;

exports[`DeleteBuilder sqlite where with association (both field and aggregate) 2`] = `
Array [
  "BEAR GRACELAND",
  20,
]
`;

exports[`DeleteBuilder sqlite where with association (count) 1`] = `"delete from \`language\` where \`language\`.\`language_id\` in (select \`l1\`.\`language_id\` from \`language\` as \`l1\` where (exists (select null from \`film\` as \`f1\` where \`l1\`.\`language_id\` = \`f1\`.\`language_id\` group by \`f1\`.\`language_id\` having count(\`f1\`.\`film_id\`) > ?)))"`;

exports[`DeleteBuilder sqlite where with association (count) 2`] = `
Array [
  1,
]
`;

exports[`DeleteBuilder sqlite where with association (multi) 1`] = `"delete from \`language\` where \`language\`.\`language_id\` in (select \`l1\`.\`language_id\` from \`language\` as \`l1\` where (exists (select null from \`film\` as \`f1\` where \`l1\`.\`language_id\` = \`f1\`.\`language_id\` and \`f1\`.\`title\` = ? group by \`f1\`.\`language_id\`)))"`;

exports[`DeleteBuilder sqlite where with association (multi) 2`] = `
Array [
  "BEAR GRACELAND",
]
`;

exports[`DeleteBuilder sqlite where with association (single) 1`] = `"delete from \`film\` where \`film\`.\`film_id\` in (select \`f1\`.\`film_id\` from \`film\` as \`f1\` where (exists (select null from \`language\` as \`l1\` where \`f1\`.\`language_id\` = \`l1\`.\`language_id\` and \`l1\`.\`name\` = ?)))"`;

exports[`DeleteBuilder sqlite where with association (single) 2`] = `
Array [
  "English",
]
`;

exports[`DeleteBuilder sqlite where with association (through) 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` where (exists (select null from \`film\` as \`f1\` inner join \`film_actor\` as \`f2\` on \`f2\`.\`film_id\` = \`f1\`.\`film_id\` where \`a1\`.\`actor_id\` = \`f2\`.\`actor_id\` and \`f1\`.\`title\` = ? group by \`f2\`.\`film_id\`)))"`;

exports[`DeleteBuilder sqlite where with association (through) 2`] = `
Array [
  "BEAR GRACELAND",
]
`;

exports[`DeleteBuilder sqlite where with empty object 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\`)"`;

exports[`DeleteBuilder sqlite where with empty object 2`] = `Array []`;

exports[`DeleteBuilder sqlite where with extra operators 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` where \`a1\`.\`first_name\` = ?)"`;

exports[`DeleteBuilder sqlite where with extra operators 2`] = `
Array [
  "BOB",
]
`;

exports[`DeleteBuilder sqlite where with nested association 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` where (exists (select null from \`film\` as \`f1\` inner join \`film_actor\` as \`f2\` on \`f2\`.\`film_id\` = \`f1\`.\`film_id\` where \`a1\`.\`actor_id\` = \`f2\`.\`actor_id\` and (exists (select null from \`language\` as \`l1\` where \`f1\`.\`language_id\` = \`l1\`.\`language_id\` and \`l1\`.\`name\` = ?)) group by \`f2\`.\`film_id\`)))"`;

exports[`DeleteBuilder sqlite where with nested association 2`] = `
Array [
  "English",
]
`;

exports[`DeleteBuilder sqlite where with non-existent field 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\`)"`;

exports[`DeleteBuilder sqlite where with non-existent field 2`] = `Array []`;

exports[`DeleteBuilder sqlite where with one field 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` where \`a1\`.\`first_name\` = ?)"`;

exports[`DeleteBuilder sqlite where with one field 2`] = `
Array [
  "BOB",
]
`;

exports[`DeleteBuilder sqlite where with two field 1`] = `"delete from \`actor\` where \`actor\`.\`actor_id\` in (select \`a1\`.\`actor_id\` from \`actor\` as \`a1\` where \`a1\`.\`first_name\` = ? and \`a1\`.\`last_name\` = ?)"`;

exports[`DeleteBuilder sqlite where with two field 2`] = `
Array [
  "BOB",
  "GOODALL",
]
`;
